--- a/minil.toml
+++ b/minil.toml
@@ -1,5 +1,5 @@
 name = "App-optex-textconv"
-# badges = ["travis-ci.com"]
+badges = ["travis-ci.com"]
 authority="cpan:UTASHIRO"
 
 module_maker="ModuleBuildTiny"
