--- a/minil.toml
+++ b/minil.toml
@@ -1,7 +1,7 @@
-name = "App-optex-textconv"
-badges = ["travis-ci.com"]
-authority="cpan:UTASHIRO"
+name      = "App-optex-textconv"
+badges    = [ 'github-actions/test', 'metacpan' ]
+authority = "cpan:UTASHIRO"
 
-module_maker="ModuleBuildTiny"
+module_maker   = "ModuleBuildTiny"
 static_install = "auto"
 
