Checking in changes prior to tagging of version 1.04.
Changelog diff is:

diff --git a/Changes b/Changes
index 4af92b8..a46071e 100644
--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension App-optex-textconv
 
 {{$NEXT}}
 
+1.04 2023-03-09T03:50:37Z
+
+    - Introduce textconv::git module to handle git file object.
+
 1.03 2022-06-21T10:48:49Z
 
     - Simplified @ARGV handling.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        perl: [ '5.34', '5.18', '5.14' ]
+        perl: [ '5.36', '5.18', '5.14' ]
     name: Perl ${{ matrix.perl }}
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
         with:
           submodules: recursive
       - name: Setup perl
@@ -21,5 +21,5 @@ jobs:
         with:
           perl-version: ${{ matrix.perl }}
       - run: perl -V
-      - run: cpanm --installdeps --notest --with-recommends .
+      - run: cpanm --installdeps --notest --with-recommends --quiet .
       - run: prove -lrv t
